# Learning-OpenGL

./: .gitignore  .gitmodules  CMakeLists.txt
Source/: CMakeLists.txt  Main.cpp
Source/Common/: structures.h
Source/Core/: Application.cpp  Application.h  Buffers.cpp  Buffers.h  CMakeLists.txt  Error.cpp  Error.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexLayout.h
Source/Shaders/: fragment.glsl  fragmentColor.glsl  vertex.glsl
Source/Tests/: CMakeLists.txt  Test.h  TestClearColor.cpp  TestClearColor.h  TestColorCubes.cpp  TestColorCubes.h  TestMenu.cpp  TestMenu.h  TestTextures.cpp  TestTextures.h  TestTextures2D.cpp  TestTextures2D.h  TestTextures3D.cpp  TestTextures3D.h
